// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android supports fetching a single matching element 1`] = `
Object {
  "using": "accessibility id",
  "value": "button",
}
`;

exports[`Android supports fetching elements containing the a accessibility label 1`] = `
Object {
  "using": "-android uiautomator",
  "value": "new UiSelector().descriptionContains(\\"-item-\\")",
}
`;

exports[`Android supports fetching elements starting with a given accessibility label 1`] = `
Object {
  "using": "-android uiautomator",
  "value": "new UiSelector().descriptionStartsWith(\\"list-item-\\")",
}
`;

exports[`Android supports fetching multiple matching elements 1`] = `
Object {
  "using": "accessibility id",
  "value": "button",
}
`;

exports[`iOS supports fetching a single matching element 1`] = `
Object {
  "using": "accessibility id",
  "value": "button",
}
`;

exports[`iOS supports fetching elements containing the a accessibility label 1`] = `
Object {
  "using": "-ios predicate string",
  "value": "name CONTAINS '-item-'",
}
`;

exports[`iOS supports fetching elements starting with a given accessibility label 1`] = `
Object {
  "using": "-ios predicate string",
  "value": "name BEGINSWITH 'list-item-'",
}
`;

exports[`iOS supports fetching multiple matching elements 1`] = `
Object {
  "using": "accessibility id",
  "value": "button",
}
`;
